Add scaffold for the endpoint to adding an item to a safebox
The standard Authorization header with the Bearer HTTP authentication
scheme will be used for granting access to users to the safeboxes.

The acceptance tests are currently in red.
