# apps/safe_ish/safeboxes/api/v1/add_safebox_item_controller.rb
@@ -1,0 +1,15 @@
+# frozen_string_literal: true
+
+module SafeIsh
+  module Safeboxes
+    module Api
+      module V1
+        class AddSafeboxItemController < ApplicationController
+          def create
+            # TODO
+          end
+        end
+      end
+    end
+  end
+end
